# mss

./: .gitignore  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pypi.yml
api/: index.html
api/config/: index.html
api/core/: index.html
api/inference/: index.html
api/io/: index.html
api/models/: index.html
api/training/: index.html
api/types/: index.html
concepts/: index.html
config/: index.html
data/: README.md  config.schema.json  default_registry.json  registry.json  registry.schema.json
data/config/: bs_roformer-aufr33-male_female.json  bs_roformer-unwa-large_v1.json  bs_roformer-unwa-resurrection_instrumental.json  bs_roformer-unwa-resurrection_vocals.json  bs_roformer-unwa-revive.json  bs_roformer.json  mel_roformer-gabox-vocals.json
data/models/: .gitignore
docs/: api.md  concepts.md  config.md  examples.md  models.md  tutorial.md
docs/api/: config.md  core.md  index.md  inference.md  io.md  models.md  training.md  types.md
docs/assets/mvsep/: .gitignore
docs/examples/ext_project/scripts/: main.py
docs/examples/ext_project/src/my_library/models/: my_model.py
examples/: hub.py  index.html  inference.py
examples/ext_project/src/my_library/models/: __init__.py  my_model.py
models/: index.html
scripts/: community.py  fmt_fractured_json.js  gen_schema.py  main.py  mvsep.py  parse_weights.py
search/: search_index.json
src/mss/: __init__.py  __main__.py  config.py  core.py  inference.py  io.py  training.py
src/mss/models/: __init__.py  attend_sage.py  bs_roformer.py
src/mss/models/utils/: __init__.py  attend.py  attend_sage.py
src/mss/utils/: attend.py  attend_sage.py  mil.py
src/splifft/: __init__.py  __main__.py  config.py  core.py  inference.py  io.py  registry.py  training.py  types.py
src/splifft/models/: __init__.py  bs_roformer.py
src/splifft/models/utils/: attend.py  attend_sage.py  stft.py
tests/: test_config.py  test_model_metadata.py
tutorial/: index.html
