[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mss"
version = "0.0.2"
description = "Music source separation inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.21.0",
    "einops>=0.8.1",
    "hyper-connections>=0.1.15",
    "numpy>=2.2.6",
    "torch>=2.7.1",
]

[project.optional-dependencies]
inference = ["pydantic>=2.11.5"]
sageattention = ["sageattention>=1.0.6"]
youtube = ["yt-dlp>=2025.5.22"]
cli = ["typer>=0.16.0"]
networking = ["httpx[http2,zstd]>=0.28.1"]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
docs = ["mkdocs-material[imaging]>=9.6.14", "mkdocstrings-python>=1.16.12"]
lint = ["ruff>=0.11.12"]
test = ["pytest>=8.4.0"]
typing = ["mypy>=1.16.0"]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins = ["pydantic.mypy"]
